--- a/style.css
+++ b/style.css
@@ -1,4 +1,50 @@
-.btn-submit {
+
+
+ul{
+    position: relative;
+}
+
+ul li::after {
+    content: '';
+    background-color: red;
+    width: 12px;
+    height: 12px;
+    border-radius:50%;
+    position: absolute;
+    left: 140px;
+}
+
+ul li::before {
+    content: '';
+    background-color: blue;
+    width: 12px;
+    height: 12px;
+    border-radius:50%;
+    position: absolute;
+    left: 10px;
+}
+
+p::first-line{
+    color: red;
+}
+
+
+
+/* ul li::after {
+    content: 'Alguma coisa';
+    color: red;
+    font-size: 24px;
+} */
+
+
+
+
+
+
+
+
+
+/* .btn-submit {
     padding: 12px;
     color: white;
     background: rgb(0, 111, 215);
@@ -36,7 +82,7 @@ input[type=text]:disabled {
 
 input[type=text]:disabled::placeholder {
     color: white;
-}
+} */
 
 
 
